# XuneAudioLibrary

./: .gitignore  .gitmodules  CMakeLists.txt
include/xune_audio/: xune_beat.h  xune_embedding.h  xune_export.h  xune_metadata.h  xune_nowplaying.h
src/: fftw_plan_mutex.h  mlx_gpu_mutex.h  ort_session.h  xune_version.cpp
src/beattracking/: beat_inference.h  beat_inference_mlx.cpp  beat_inference_ort.cpp  beat_mel_spectrogram.cpp  beat_mel_spectrogram.h  beat_postprocess.cpp  beat_postprocess.h  beat_service.cpp
src/metadata/: MetadataFile.cpp  MetadataFile.h  xune_metadata.cpp
src/nowplaying/: nowplaying_linux.cpp  nowplaying_macos.mm  nowplaying_stub.cpp  nowplaying_windows.cpp
src/smartdj/: embedding_service.cpp  mel_spectrogram.cpp  mel_spectrogram.h  model_inference.h  model_inference_mlx.cpp  model_inference_ort.cpp  onnx_inference.cpp  onnx_inference.h
tests/: beat_test.cpp  compare_metadata.py  generate_test_files.py  metadata_dump.cpp  metadata_format_test.cpp  metadata_picture_test.cpp  metadata_test.cpp  smartdj_test.cpp  test_utils.h
tests/testdata/: test.flac  test.m4a  test.wma
tools/: generate_reference_embeddings.cpp
